calendar#423 fixed the video conference button displaying too close to the note field and having a slight left padding as an attendee

--- a/src/linagora.esn.videoconference.calendar/app/components/calendar-videoconference-form/calendar-videoconference.less
+++ b/src/linagora.esn.videoconference.calendar/app/components/calendar-videoconference-form/calendar-videoconference.less
@@ -50,3 +50,28 @@
     margin-right: 16px;
   }
 }
+
+.video-conference-no-edit {
+  .flex-vertical-centered;
+
+  margin-bottom: 10px;
+
+  span.icon {
+    cursor: help;
+    font-size: 1.9em;
+    padding-right: 10px;
+  }
+
+  .meta {
+    padding-left: 12px;
+
+    .separator {
+      display: inline;
+      margin: 0px 3px;
+    }
+
+    .separator:first-child {
+      display: none;
+    }
+  }
+}
